--- a/index.html
+++ b/index.html
@@ -48,8 +48,11 @@
     <section class="max-w-6xl w-full mx-auto">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide swiper1 flex items-center">
-            <div class="w-full sm:w-1/2 flex flex-col sm:block">
+          <!-- slide 1 -->
+          <div
+            class="swiper-slide swiper1 px-16 py-10 sm:py-0 sm:px-0 flex items-center"
+          >
+            <div class="w-full flex flex-col sm:w-1/2 sm:block">
               <div class="text-container text-center sm:text-left">
                 <div class="title text-3xl font-bold text-primary-color-dark">
                   New World Explore
@@ -66,13 +69,15 @@
             </div>
             <div class="w-full sm:w-1/2">
               <img
-                class="w-[700px] h-[400px] hidden sm:block"
-                src="images/car-yellow.svg"
+                class="w-[600px] hidden sm:block"
+                src="images/car-red.svg"
                 alt=""
               />
             </div>
           </div>
-          <div class="swiper-slide swiper1 flex items-center">
+          <div
+            class="swiper-slide swiper1 px-16 py-10 sm:py-0 sm:px-0 flex items-center"
+          >
             <div class="w-full sm:w-1/2 flex flex-col sm:block">
               <div class="text-container text-center sm:text-left">
                 <div class="title text-3xl font-bold text-primary-color-dark">
@@ -90,13 +95,15 @@
             </div>
             <div class="w-full sm:w-1/2">
               <img
-                class="w-[400px] h-[400px] hidden sm:block"
-                src="images/car-red.svg"
+                class="w-[800px] h-[400px] hidden sm:block"
+                src="images/car-yellow.svg"
                 alt=""
               />
             </div>
           </div>
-          <div class="swiper-slide swiper1 flex items-center">
+          <div
+            class="swiper-slide swiper1 px-16 py-10 sm:py-0 sm:px-0 flex items-center"
+          >
             <div class="w-full sm:w-1/2 flex flex-col sm:block">
               <div class="text-container text-center sm:text-left">
                 <div class="title text-3xl font-bold text-primary-color-dark">
@@ -1692,9 +1699,7 @@
       <div class="flex items-center justify-center p-5">
         <div class="flex flex-wrap justify-center">
           <div class="card-zoom group">
-            <div
-              class="card-zoom-image bg-[url('/images/mountain2.jpg')]"
-            ></div>
+            <div class="card-zoom-image bg-[url('/images/boat.jpg')]"></div>
             <h1 class="card-zoom-text">
               <p class="">June 6, 2016. John Smith</p>
               <p class="group-hover:text-secondary-color font-bold">
