--- a/index.html
+++ b/index.html
@@ -1770,25 +1770,80 @@
       </div>
       <!-- footer links -->
       <div
-        class="max-w-6xl mx-auto grid grid-cols-[2fr_1fr_1fr_1fr] items-center justify-items-center"
+        class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-[2fr_1fr_1fr_1fr] gap-5 items-center justify-items-center border-b border-gray-500 pb-10 mt-10"
       >
-        <div class="">
+        <div class="flex flex-col items-center">
           <div>
             <a href="./">
-              <img class="w-44 p-1" src="./images/nt-logo.png" alt="logo" />
+              <img class="w-44" src="./images/nt-logo.png" alt="logo" />
             </a>
+          </div>
+          <div>
+            <p class="w-64 text-gray-500 mb-2 text-center">
+              Dive deep into the local culture with our immersive tours that go
+              beyond the typical tourist experience. Participate in traditional
+            </p>
+          </div>
+          <div class="">
+            <img src="./images/payment-card.png" alt="" />
           </div>
         </div>
         <div class="">
-          <h3 class="text-3xl font-bold">Quick Links</h3>
-          <!-- <hr class="w-10 mt-3 text-primary-color-dark bg-primary-color-dark" /> -->
+          <h3
+            class="text-3xl font-bold border-b-2 border-primary-color-dark pb-2"
+          >
+            Quick Links
+          </h3>
+          <ul class="space-y-2 mt-2">
+            <li>Home</li>
+            <li>Services</li>
+            <li>Latest News</li>
+            <li>Booking</li>
+            <li>Destinations</li>
+          </ul>
         </div>
         <div class="">
-          <h3 class="text-3xl font-bold">Support</h3>
+          <h3
+            class="text-3xl font-bold border-b-2 border-primary-color-dark pb-2 mr-16"
+          >
+            Support
+          </h3>
+          <ul class="space-y-2 mt-2">
+            <li>Home</li>
+            <li>Services</li>
+            <li>Latest News</li>
+            <li>Booking</li>
+            <li>Destinations</li>
+          </ul>
         </div>
         <div class="">
-          <h3 class="text-3xl font-bold">Get in Touch</h3>
+          <h3
+            class="text-3xl font-bold border-b-2 border-primary-color-dark pb-2"
+          >
+            Get in Touch
+          </h3>
+          <p class="mt-5">
+            <span class="text-primary-color-dark font-bold mr-2">Email:</span
+            ><span class="text-gray-500">info@naturaltravel.com</span>
+          </p>
+          <p class="mt-3">
+            <span class="text-primary-color-dark font-bold mr-2">Phone:</span
+            ><span class="text-gray-500">+123456789</span>
+          </p>
+          <p class="mt-3">
+            <span class="text-primary-color-dark font-bold mr-2">Fax:</span
+            ><span class="text-gray-500">+1(880)123456789</span>
+          </p>
+          <div class="flex gap-2 mt-3">
+            <img class="w-5" src="./images/square-facebook.svg" alt="" />
+            <img class="w-5" src="./images/square-twitter.svg" alt="" />
+            <img class="w-5" src="./images/square-instagram.svg" alt="" />
+            <img class="w-5" src="./images/square-pinterest.svg" alt="" />
+          </div>
         </div>
+      </div>
+      <div class="text-center mt-5 text-gray-500">
+        Copyright ©2024 Natural Travel All Rights Reserved
       </div>
     </section>
 
