--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="swiper-wrapper">
           <!-- slide 1 -->
           <div
-            class="swiper-slide swiper1 px-16 py-10 sm:py-0 sm:px-0 flex items-center"
+            class="swiper-slide swiper1 py-10 sm:py-0 sm:px-0 flex items-center"
           >
             <div class="w-full flex flex-col sm:w-1/2 sm:block">
               <div class="text-container text-center sm:text-left">
