1st slider mobile device fix

--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <!-- slide 1 -->
-          <div
-            class="swiper-slide swiper1 py-10 sm:py-0 sm:px-0 flex items-center"
-          >
-            <div class="w-full flex flex-col sm:w-1/2 sm:block">
+          <div class="swiper-slide swiper1 py-0 px-0 flex md:items-center">
+            <!-- text and btn -->
+            <div class="flex flex-col items-center w-2/3 mx-auto py-10">
               <div class="text-container text-center sm:text-left">
                 <div class="title text-3xl font-bold text-primary-color-dark">
                   New World Explore
@@ -61,18 +60,16 @@
                   Final Journey it is!
                 </div>
               </div>
-              <button
-                class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
-              >
-                Explore Now
-              </button>
+              <div class="">
+                <button
+                  class="text-white bg-primary-color-dark transition-all duration-700 px-10 py-5 mt-5 shadow-xl rounded-l-full rounded-r-full"
+                >
+                  Explore Now
+                </button>
+              </div>
             </div>
-            <div class="w-full sm:w-1/2">
-              <img
-                class="w-[600px] hidden sm:block"
-                src="images/car-red.svg"
-                alt=""
-              />
+            <div class="w-full sm:w-1/2 hidden md:block">
+              <img class="w-[600px]" src="images/car-red.svg" alt="" />
             </div>
           </div>
           <div
@@ -1950,3 +1947,8 @@
     </script>
   </body>
 </html>
+
+<!-- 
+inspiration from 
+https://themeforest.net/item/travel-trek-tour-and-travel-agency-html-template/51900592
+-->
