--- a/index.html
+++ b/index.html
@@ -5,10 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg+xml" href="/images/nt-icon.png" />
     <title>Natural Travel</title>
-    <!-- <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-  /> -->
     <link rel="stylesheet" href="swiper-bundle.css" />
     <link rel="stylesheet" href="tailwind.css" />
     <link rel="stylesheet" href="style-custom.css" />
@@ -19,7 +15,7 @@
     >
       <div>
         <a href="./">
-          <img class="w-44 p-1" src="./images/nt-logo.png" alt="logo" />
+          <img class="w-44 h-20" src="./images/nt-logo.png" alt="logo" />
         </a>
       </div>
 
