--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
 
     <!-- Popular Destinations section -->
 
-    <section class="w-full mx-auto bg-[url('/images/lake.jpg')] bg-cover py-16">
+    <section class="w-full mx-auto bg-[url('/images/sand.jpg')] bg-cover py-16">
       <div class="text-center pt-20">
         <h3 class="text-secondary-color font-bold text-2xl">
           EXPLORE WONDERFUL EXPERIENCE
