--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </label>
         </div>
 
-        <div class="nav-links">
+        <div class="nav-links rounded-xl text-center">
           <a class="underline-hover" href="#">Home</a>
           <a class="underline-hover" href="#">About Us</a>
           <a class="underline-hover" href="#">Destination</a>
